# novaedge

./: .dockerignore  .gitignore  .gitleaks.toml  .golangci.yml  CHANGELOG.md  CLAUDE.md  Dockerfile.agent  Dockerfile.build  Dockerfile.controller  Dockerfile.dataplane  Dockerfile.novactl  Dockerfile.operator  Dockerfile.standalone  Dockerfile.webui  Dockerfile.webui.release  LICENSE  Makefile  PLAN.md  README.md  go.mod  go.sum  mkdocs.yml
.github/: dependabot.yml
NovaRoute/: .gitignore  Dockerfile  Dockerfile.frr  Makefile  README.md  go.mod  go.sum
bpf/: afxdp_redirect.c  conntrack.c  maglev_lookup.c  mesh_redirect.c  xdp_lb.c
dataplane/: Cargo.toml
dataplane/novaedge-dataplane/: Cargo.toml  build.rs
dataplane/novaedge-dataplane/src/: config.rs  flows.rs  listener.rs  loader.rs  main.rs  maps.rs  proto.rs  server.rs
dataplane/novaedge-dataplane/src/health/: checker.rs  mod.rs  types.rs
dataplane/novaedge-dataplane/src/l4/: mod.rs  proxy_protocol.rs  tcp.rs  udp.rs
dataplane/novaedge-dataplane/src/lb/: ewma.rs  least_conn.rs  maglev.rs  mod.rs  p2c.rs  random.rs  ring_hash.rs  round_robin.rs  slow_start.rs  source_hash.rs  sticky.rs  subsetting.rs
dataplane/novaedge-dataplane/src/mesh/: authz.rs  mod.rs  mtls.rs  spiffe.rs  tproxy.rs
dataplane/novaedge-dataplane/src/middleware/: cache.rs  compression.rs  cors.rs  ip_filter.rs  mod.rs  pipeline.rs  ratelimit.rs  security_headers.rs  waf.rs
dataplane/novaedge-dataplane/src/middleware/auth/: basic.rs  forward.rs  jwt.rs  mod.rs
dataplane/novaedge-dataplane/src/proxy/: handler.rs  http3.rs  mod.rs  response.rs  router.rs
dataplane/novaedge-dataplane/src/sdwan/: link.rs  mod.rs  path_selection.rs  wireguard.rs
dataplane/novaedge-dataplane/src/upstream/: adaptive.rs  circuit_breaker.rs  mod.rs  outlier.rs  pool.rs  retry_budget.rs
dataplane/novaedge-dataplane/src/vip/: garp.rs  manager.rs  mod.rs  routing.rs
deploy/: k3s-ha-deploy.sh  k3s-ha-resume.sh
docs/: CONTEXT_PROPAGATION.md  (+6 more)
(+1269 files in other folders)
