[package]
name = "novaedge-dataplane"
version = "0.1.0"
edition = "2021"

[dependencies]
novaedge-common = { path = "../novaedge-common", features = ["userspace"] }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
async-stream = "0.3"
rand = "0.8"
base64 = "0.22"
dashmap = "6"

[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.13"
aya-log = "0.2"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
