[package]
name = "novaedge-dataplane"
version = "0.1.0"
edition = "2021"

[dependencies]
novaedge-common = { path = "../novaedge-common", features = ["userspace"] }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
async-stream = "0.3"
rand = "0.9"
base64 = "0.22"
dashmap = "6"
hyper = { version = "1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1", "http2"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
hmac = "0.12"
sha2 = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.16"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
